# srpc

./: .clang-format  .clang-tidy  CMakeLists.txt
.github/workflows/: ci.yml
examples/: CMakeLists.txt  tcp_client.cc  tcp_server.cc  udp_client.cc  udp_server.cc
include/srpc/network/: client.h  datagram_client.h  datagram_server.h  datagram_socket.h  message.h  server.h  server_datagram_socket.h  server_socket.h  socket.h  tcp_ip.h
include/srpc/protocol/: floats.h  integers.h  serialization.h  strings.h
include/srpc/types/: floats.h  integers.h  serialization.h  strings.h  vectors.h
include/srpc/utils/: memory.h  result.h
src/network/: client.cc  client.h  server.cc  server.h  server_socket.cc  server_socket.h  socket.cc  socket.h  tcp_ip.cc  tcp_ip.h
src/protocol/: floats.cc  floats.h  integers.cc  integers.h  string.cc  string.h
src/srpc/network/: client.cc  datagram_client.cc  datagram_server.cc  datagram_socket.cc  message.cc  server.cc  server_datagram_socket.cc  server_socket.cc  socket.cc  tcp_ip.cc
src/srpc/protocol/: string.cc  strings.cc
src/srpc/types/: strings.cc  vectors.cc
src/utils/: memory.cc  memory.h  result.h
test/: CMakeLists.txt
test/protocol/: floats.cc  integers.cc  string.cc
test/srpc/protocol/: floats.cc  integers.cc  string.cc  strings.cc
test/srpc/types/: floats.cc  integers.cc  strings.cc  vectors.cc
test/srpc/utils/: memory.cc  result.cc
test/utils/: memory.cc  result.cc
